fix(FEV-1296): fixed issue with dual screen plugin overlap (#60)
* fix(FEV-1296): fixed issue with dual screen plugin overlap

* FEV-1296 removed global styles

* fix(FEV-1296): nvmrc file, refactor code

* fix(FEV-1296): manage dual-screen styles by plugin class-name

* fix(FEV-1296): upd kaltura player

--- a/src/components/pip/pip.scss
+++ b/src/components/pip/pip.scss
@@ -127,8 +127,3 @@ $hide-container-gap: 5px;
   }
 }
 
-:global {
-  .playkit-subtitles.moveToTop {
-    z-index: 1;
-  }
-}
